...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jdr-Q9-tdT" userLabel="btnEnter">
                                <rect key="frame" x="185" y="438" width="44" height="30"/>
                                <state key="normal" title="Войти"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите ваш E-Mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oz4-Uc-Rvp" userLabel="txtLogin">
                                                <rect key="frame" x="20" y="343.5" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="lblLogin"/>
                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите ваш пароль" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cuF-ik-Fuh" userLabel="txtPassword">
                                                <rect key="frame" x="20" y="416.5" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="lblPassword"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
...
                                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пароль" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uTc-JJ-zuY" userLabel="lblPassword">
                                                <rect key="frame" x="20" y="387.5" width="374" height="19"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgT-6j-FIQ" userLabel="lblEmail" customClass="TextFieldView" customModule="GeekShop" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="56" width="414" height="81"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBT-NT-ADd" userLabel="btnExit">
                                <rect key="frame" x="147" y="573" width="120" height="30"/>
                                <state key="normal" title="Выход"/>
                                <connections>
                                    <action selector="btnExitClicked:" destination="vxl-jL-HRh" eventType="touchUpInside" id="kUZ-9Y-Re2"/>
...
                        <viewLayoutGuide key="safeArea" id="UK3-0u-u52"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Профиль" image="person.circle" catalog="system" id="WXS-b5-cgs"/>
                    <navigationItem key="navigationItem" id="WnZ-Ps-jRo"/>
                    <connections>
...
