...
                                                    <action selector="addReviewClicked" destination="8w7-VB-1rf" eventType="touchUpInside" id="U6I-7a-mjC"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJJ-PP-MEG" userLabel="btnAddToBasket">
                                                <rect key="frame" x="10" y="373.66666666666669" width="394" height="30"/>
                                                <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="Добавить в корзину">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="btnAddToBasketClicked:" destination="8w7-VB-1rf" eventType="touchUpInside" id="Qar-Oq-q2t"/>
                                                </connections>
                                            </button>
...
            <objects>
                <viewController storyboardIdentifier="basketScreen" id="pFr-hf-Gik" customClass="BasketViewController" customModule="GeekShop" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ir6-xB-KnC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Корзина" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2l-o2-wlg" userLabel="lblBasketTitle">
                                <rect key="frame" x="144" y="64" width="126" height="36"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nib-TL-ild" userLabel="tblBasket">
...
                            <constraint firstItem="J7h-pJ-j8c" firstAttribute="leading" secondItem="hfe-wf-GBU" secondAttribute="leading" id="N95-Cg-Wmv"/>
                            <constraint firstItem="hfe-wf-GBU" firstAttribute="trailing" secondItem="J7h-pJ-j8c" secondAttribute="trailing" id="XWV-rL-UAX"/>
                            <constraint firstItem="hfe-wf-GBU" firstAttribute="bottom" secondItem="J7h-pJ-j8c" secondAttribute="bottom" id="mx5-7J-3xN"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hfe-wf-GBU"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Каталог" image="folder.circle" catalog="system" id="Sy2-ZG-ge5"/>
                    <connections>
                        <outlet property="tableView" destination="J7h-pJ-j8c" id="lVP-G2-GGY"/>
                        <segue destination="8w7-VB-1rf" kind="show" identifier="showProdcutPage" id="mHX-lC-fw5"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CWv-C7-20i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
